# showinfo-

./: CMakeLists.txt  about.md  changelog.md  mod.json  support.md
.github/workflows/: multi-platform.yml  release.yml  relwithdebinfo.yml
src/: main.cpp
